--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,49 @@ code {
   text-decoration: none;
   color: white;
 }
+.container{
+  width: 80%;
+  margin: 40px auto;
+  display: flex;
+  justify-content: center;
+}
+.footer{
+  display: none;
+}
+
+@media only screen and (max-width: 600px) {
+  .container{
+    width: 96%;
+    margin: 0 auto;
+  }
+  .card-user{
+    display: none;
+  }
+  .card-search {
+    display: none;
+  }
+  .nav{
+    display: none;
+  }
+  .title-nav{
+    margin-left: 0 !important;
+  }
+  .nav-user{
+    margin-right: 0 !important;
+  }
+  .card-posts{
+    width: 100%;
+    margin-left: 0;
+    margin-top: 25px !important;
+  }
+  .footer{
+    display: flex;
+    justify-content: space-around;
+    background: #d5d5d6;
+    height: 40px;
+    align-items: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+  }
+}
